# itsm-project

./: .env  makefile  pyproject.toml  readme.md
itsm-frontend/: README.md  package.json  pnpm-lock.yaml  vue.config.js
itsm-frontend/src/: App.vue  main.js
itsm_backend/: db.sqlite3  pyproject.toml  pytest.ini
itsm_backend/catalog/: urls.py
itsm_backend/incident/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
itsm_backend/incident/migrations/: 0001_initial.py  0002_remove_incident_updated_at_incident_responsible_and_more.py  0003_incident_updated_at.py  0004_alter_incident_created_by.py
itsm_backend/incidents/: models.py
itsm_backend/itsm_project/: settings.py  urls.py  views.py
itsm_backend/main/: admin.py  models.py  test_main.py  urls.py  views.py
itsm_backend/main/migrations/: 0001_initial.py  0002_alter_customuser_role.py
itsm_backend/messaging/: admin.py  models.py  serializers.py  urls.py  views.py
itsm_backend/messaging/migrations/: 0001_initial.py
itsm_backend/messaging/templates/: base.html
itsm_backend/service/: models.py  serializers.py  urls.py  views.py
itsm_backend/service/migrations/: 0001_initial.py  0002_service_category.py  0003_businessservice_technicalservice_delete_service.py
itsm_frontend/: .gitignore  package.json  pnpm-lock.yaml
itsm_frontend/src/: App.vue  main.js
itsm_project/: db.sqlite3
itsm_project/catalog/: models.py  views.py
itsm_project/itsm_project/: settings.py  urls.py
public-incident-report/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
(+47 files in other folders)
